Make all the unit tests
Unit tests are complete, but don't completely work yet. Need some ajusts before go to the main branch.
